--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Alex Christodoulou's Landing Page</title>
     <style>
         body { margin: 0; overflow: hidden; }
-        canvas { display: block; }
+        canvas { display: block; 
+		touch-action: none; }
         #label {
             position: absolute;
             color: white;
@@ -77,7 +78,7 @@
         var spacing = 50;
         var boxes = [];
         var minHeight = 15;
-        var maxHeight = 30;
+        var maxHeight = 80;
 
         var colors = [
             0xD7263D, // Crimson
@@ -246,7 +247,7 @@
             camera.updateProjectionMatrix();
         });
 
-         // Handle mouse movement for hover interaction
+        // Handle mouse movement for hover interaction
         window.addEventListener('mousemove', function(event) {
             document.body.style.cursor = 'default';
             mouse.x = (event.clientX / window.innerWidth) * 2 - 1;
@@ -264,11 +265,11 @@
                 labelElement.innerHTML = intersectedGroup.userData.label;
 
                 boxes.forEach(function(group) {
-                if (group !== intersectedGroup) {
-                    group.userData.animating = true;
-                } else {
-                    group.userData.animating = false;
-                }
+                    if (group !== intersectedGroup) {
+                        group.userData.animating = true;
+                    } else {
+                        group.userData.animating = false;
+                    }
                 });
                 cameraRotating = true;
             } else {
@@ -291,37 +292,59 @@
                     document.getElementById('about').style.display = 'block';
                 } else if (intersectedGroup.userData.label === "Contact") {
                     document.getElementById('contact').style.display = 'block';
-					 } else if (intersectedGroup.userData.label === "Services") {
+                } else if (intersectedGroup.userData.label === "Services") {
                     document.getElementById('services').style.display = 'block';
                 } else {
                     window.open(intersectedGroup.userData.link, '_blank');
                 }
             } else {
                 document.getElementById('about').style.display = 'none';
-				document.getElementById('contact').style.display = 'none';
-				document.getElementById('services').style.display = 'none';
+                document.getElementById('contact').style.display = 'none';
+                document.getElementById('services').style.display = 'none';
             }
         });
-		
-		// Add controls for mobile users
-        if (/Mobi|Android/i.test(navigator.userAgent)) {
-            window.addEventListener('touchstart', function(event) {
-                raycaster.setFromCamera(mouse, camera);
-                var intersects = raycaster.intersectObjects(boxes, true);
-                if (intersects.length > 0) {
-                    var intersectedGroup = intersects[0].object.parent;
-                    if (intersectedGroup.userData.label === "About Me") {
-                        document.getElementById('about').style.display = 'block';
-                    } else if (intersectedGroup.userData.label === "Contact") {
-                        window.location.href = intersectedGroup.userData.link;
-                    } else {
-                        window.open(intersectedGroup.userData.link, '_blank');
-                    }
+
+       // Pointer Events
+        renderer.domElement.addEventListener('pointermove', function(event) {
+            event.preventDefault();
+            mouse.x = (event.clientX / window.innerWidth) * 2 - 1;
+            mouse.y = -(event.clientY / window.innerHeight) * 2 + 1;
+            raycaster.setFromCamera(mouse, camera);
+            var intersects = raycaster.intersectObjects(boxes, true);
+            if (intersects.length > 0) {
+                var intersectedGroup = intersects[0].object.parent;
+                labelElement.style.display = 'block';
+                labelElement.style.left = (event.clientX + 10) + 'px';
+                labelElement.style.top = (event.clientY + 10) + 'px';
+                labelElement.innerHTML = intersectedGroup.userData.label;
+                document.body.style.cursor = 'pointer';
+            } else {
+                labelElement.style.display = 'none';
+                document.body.style.cursor = 'default';
+            }
+        }, { passive: false });
+
+        renderer.domElement.addEventListener('pointerup', function(event) {
+            event.preventDefault();
+            raycaster.setFromCamera(mouse, camera);
+            var intersects = raycaster.intersectObjects(boxes, true);
+            if (intersects.length > 0) {
+                var intersectedGroup = intersects[0].object.parent;
+                if (intersectedGroup.userData.label === "About Me") {
+                    document.getElementById('about').style.display = 'block';
+                } else if (intersectedGroup.userData.label === "Contact") {
+                    document.getElementById('contact').style.display = 'block';
+                } else if (intersectedGroup.userData.label === "Services") {
+                    document.getElementById('services').style.display = 'block';
                 } else {
-                    document.getElementById('about').style.display = 'none';
+                    window.open(intersectedGroup.userData.link, '_blank');
                 }
-            });
-        }
+            } else {
+                document.getElementById('about').style.display = 'none';
+                document.getElementById('contact').style.display = 'none';
+                document.getElementById('services').style.display = 'none';
+            }
+        }, { passive: false });
     </script>
 </body>
 </html>
