--- a/index.html
+++ b/index.html
@@ -4,18 +4,22 @@
     <meta charset="UTF-8">
     <title>Alex Christodoulou's Landing Page</title>
     <style>
-        body { margin: 0; overflow: hidden; }
-        canvas { display: block; 
-		touch-action: none; }
+    body { margin: 0; overflow: hidden; }
+    canvas { display: block; touch-action: none; }
+    #label {
+        position: absolute;
+        color: white;
+        font-size: 20px;
+        pointer-events: none;
+        text-shadow: 1px 1px 2px black;
+    }
+    @media (min-width: 769px) {
         #label {
-            position: absolute;
-            color: white;
-            font-size: 20px;
-            pointer-events: none;
             display: none;
-            text-shadow: 1px 1px 2px black;
         }
-    </style>
+    }
+</style>
+
 </head>
 <body>
     <div id="label"></div>
@@ -314,8 +318,9 @@
             if (intersects.length > 0) {
                 var intersectedGroup = intersects[0].object.parent;
                 labelElement.style.display = 'block';
-                labelElement.style.left = (event.clientX + 10) + 'px';
-                labelElement.style.top = (event.clientY + 10) + 'px';
+                labelElement.style.left = (event.clientX + (window.innerWidth < 768 ? 20 : 10)) + 'px';
+				labelElement.style.top = (event.clientY + (window.innerWidth < 768 ? 20 : 10)) + 'px';
+
                 labelElement.innerHTML = intersectedGroup.userData.label;
                 document.body.style.cursor = 'pointer';
             } else {
