--- a/index.html
+++ b/index.html
@@ -13,39 +13,16 @@
         pointer-events: none;
         text-shadow: 1px 1px 2px black;
     }
-		@media (max-width: 768px) {
-		#mobileOverlay {
-			position: absolute;
-			top: 10%;
-			left: 10%;
-			width: 80%;
-			color: white;
-			font-size: 18px;
-			text-align: center;
-			z-index: 10;
-			background: rgba(0, 0, 0, 0.5);
-			padding: 10px;
-		}
-		canvas, #label { display: none; }
-	}
-	.hidden-text { display: none; visibility: hidden;}
-
+    @media (min-width: 769px) {
+        #label {
+            display: none;
+        }
+    }
 </style>
 
 </head>
 <body>
     <div id="label"></div>
-	<div id="mobileOverlay" style="display: none;">
-    <a href="https://github.com/alex10kd/">Github</a><br>
-    <a href="https://www.shapediver.com/app/users/alexat10k-designs-com">Shapediver</a><br>
-    <a href="https://www.instagram.com/10.000designs/">Instagram</a><br>
-    <a href="https://www.10k-designs.com/blog">Blog</a><br>
-    <a href="https://www.researchgate.net/profile/Alexandros-Christodoulou">Researchgate</a><br>
-    <a href="https://www.linkedin.com/in/achristodoulou">LinkedIn</a><br>
-    <span class="reveal" data-target="about">About Me</span><br>
-    <span class="reveal" data-target="contact">Contact</span><br>
-    <span class="reveal" data-target="services">Services</span>
-	</div>
 	<div id="about" style="display: none; position: absolute; top: 10%; left: 10%; width: 80%; background: transparent; padding: 20px; color: white; font-size: 18px;"><b>Alex in a nutshell:</b><br>
 - Computational Design Technology Specialist with over a decade of experience in the AEC industry<br>
 - Advanced expertise in digital design and optimization frameworks<br>
@@ -273,137 +250,106 @@
             camera.aspect = width / height;
             camera.updateProjectionMatrix();
         });
-		// Show the mobile overlay if the screen width is 768px or less
-		if (window.innerWidth <= 768) {
-			document.getElementById('mobileOverlay').style.display = 'block';
-		}
 
-		// Handle mouse movement for hover interaction (desktop only)
-		window.addEventListener('mousemove', function(event) {
-			if (window.innerWidth > 768) {
-				document.body.style.cursor = 'default';
-				mouse.x = (event.clientX / window.innerWidth) * 2 - 1;
-				mouse.y = -(event.clientY / window.innerHeight) * 2 + 1;
+        // Handle mouse movement for hover interaction
+        window.addEventListener('mousemove', function(event) {
+            document.body.style.cursor = 'default';
+            mouse.x = (event.clientX / window.innerWidth) * 2 - 1;
+            mouse.y = -(event.clientY / window.innerHeight) * 2 + 1;
 
-				raycaster.setFromCamera(mouse, camera);
-				var intersects = raycaster.intersectObjects(boxes, true);
+            raycaster.setFromCamera(mouse, camera);
+            var intersects = raycaster.intersectObjects(boxes, true);
 
-				if (intersects.length > 0) {
-					var intersectedGroup = intersects[0].object.parent;
-					document.body.style.cursor = 'pointer';
-					labelElement.style.display = 'block';
-					labelElement.style.left = (event.clientX + 10) + 'px';
-					labelElement.style.top = (event.clientY + 10) + 'px';
-					labelElement.innerHTML = intersectedGroup.userData.label;
+            if (intersects.length > 0) {
+                var intersectedGroup = intersects[0].object.parent;
+                document.body.style.cursor = 'pointer';
+                labelElement.style.display = 'block';
+                labelElement.style.left = (event.clientX + 10) + 'px';
+                labelElement.style.top = (event.clientY + 10) + 'px';
+                labelElement.innerHTML = intersectedGroup.userData.label;
 
-					boxes.forEach(function(group) {
-						group.userData.animating = group !== intersectedGroup;
-					});
-					cameraRotating = true;
-				} else {
-					labelElement.style.display = 'none';
-					boxes.forEach(function(group) {
-						group.userData.animating = true;
-					});
-					cameraRotating = true;
-				}
-			}
-		});
+                boxes.forEach(function(group) {
+                    if (group !== intersectedGroup) {
+                        group.userData.animating = true;
+                    } else {
+                        group.userData.animating = false;
+                    }
+                });
+                cameraRotating = true;
+            } else {
+                labelElement.style.display = 'none';
+                boxes.forEach(function(group) {
+                    group.userData.animating = true;
+                });
+                cameraRotating = true;
+            }
+        });
 
-		// Handle click for hyperlink navigation and display hidden sections (desktop only)
-		window.addEventListener('click', function(event) {
-			if (window.innerWidth > 768) {
-				raycaster.setFromCamera(mouse, camera);
-				var intersects = raycaster.intersectObjects(boxes, true);
+        // Handle mouse click for hyperlink navigation
+        window.addEventListener('click', function(event) {
+            raycaster.setFromCamera(mouse, camera);
+            var intersects = raycaster.intersectObjects(boxes, true);
 
-				if (intersects.length > 0) {
-					var intersectedGroup = intersects[0].object.parent;
-					if (intersectedGroup.userData.label === "About Me") {
-						document.getElementById('about').style.display = 'block';
-					} else if (intersectedGroup.userData.label === "Contact") {
-						document.getElementById('contact').style.display = 'block';
-					} else if (intersectedGroup.userData.label === "Services") {
-						document.getElementById('services').style.display = 'block';
-					} else {
-						window.open(intersectedGroup.userData.link, '_blank');
-					}
-				} else {
-					document.getElementById('about').style.display = 'none';
-					document.getElementById('contact').style.display = 'none';
-					document.getElementById('services').style.display = 'none';
-				}
-			}
-		});
+            if (intersects.length > 0) {
+                var intersectedGroup = intersects[0].object.parent;
+                if (intersectedGroup.userData.label === "About Me") {
+                    document.getElementById('about').style.display = 'block';
+                } else if (intersectedGroup.userData.label === "Contact") {
+                    document.getElementById('contact').style.display = 'block';
+                } else if (intersectedGroup.userData.label === "Services") {
+                    document.getElementById('services').style.display = 'block';
+                } else {
+                    window.open(intersectedGroup.userData.link, '_blank');
+                }
+            } else {
+                document.getElementById('about').style.display = 'none';
+                document.getElementById('contact').style.display = 'none';
+                document.getElementById('services').style.display = 'none';
+            }
+        });
 
-		// Handle pointer events for hover and click interactions on desktop
-		renderer.domElement.addEventListener('pointermove', function(event) {
-			if (window.innerWidth > 768) {
-				event.preventDefault();
-				mouse.x = (event.clientX / window.innerWidth) * 2 - 1;
-				mouse.y = -(event.clientY / window.innerHeight) * 2 + 1;
+       // Pointer Events
+        renderer.domElement.addEventListener('pointermove', function(event) {
+            event.preventDefault();
+            mouse.x = (event.clientX / window.innerWidth) * 2 - 1;
+            mouse.y = -(event.clientY / window.innerHeight) * 2 + 1;
+            raycaster.setFromCamera(mouse, camera);
+            var intersects = raycaster.intersectObjects(boxes, true);
+            if (intersects.length > 0) {
+                var intersectedGroup = intersects[0].object.parent;
+                labelElement.style.display = 'block';
+                labelElement.style.left = (event.clientX + (window.innerWidth < 768 ? 20 : 10)) + 'px';
+				labelElement.style.top = (event.clientY + (window.innerWidth < 768 ? 20 : 10)) + 'px';
 
-				raycaster.setFromCamera(mouse, camera);
-				var intersects = raycaster.intersectObjects(boxes, true);
+                labelElement.innerHTML = intersectedGroup.userData.label;
+                document.body.style.cursor = 'pointer';
+            } else {
+                labelElement.style.display = 'none';
+                document.body.style.cursor = 'default';
+            }
+        }, { passive: false });
 
-				if (intersects.length > 0) {
-					var intersectedGroup = intersects[0].object.parent;
-					labelElement.style.display = 'block';
-					labelElement.style.left = (event.clientX + (window.innerWidth < 768 ? 20 : 10)) + 'px';
-					labelElement.style.top = (event.clientY + (window.innerWidth < 768 ? 20 : 10)) + 'px';
-					labelElement.innerHTML = intersectedGroup.userData.label;
-					document.body.style.cursor = 'pointer';
-				} else {
-					labelElement.style.display = 'none';
-					document.body.style.cursor = 'default';
-				}
-			}
-		}, { passive: false });
-
-		renderer.domElement.addEventListener('pointerup', function(event) {
-			if (window.innerWidth > 768) {
-				event.preventDefault();
-				raycaster.setFromCamera(mouse, camera);
-				var intersects = raycaster.intersectObjects(boxes, true);
-
-				if (intersects.length > 0) {
-					var intersectedGroup = intersects[0].object.parent;
-					if (intersectedGroup.userData.label === "About Me") {
-						document.getElementById('about').style.display = 'block';
-					} else if (intersectedGroup.userData.label === "Contact") {
-						document.getElementById('contact').style.display = 'block';
-					} else if (intersectedGroup.userData.label === "Services") {
-						document.getElementById('services').style.display = 'block';
-					} else {
-						window.open(intersectedGroup.userData.link, '_blank');
-					}
-				} else {
-					document.getElementById('about').style.display = 'none';
-					document.getElementById('contact').style.display = 'none';
-					document.getElementById('services').style.display = 'none';
-				}
-			}
-		}, { passive: false });
-
-		// Mobile-specific behavior for hidden sections
-		document.querySelectorAll('.reveal').forEach(item => {
-			item.addEventListener('click', function(event) {
-				event.stopPropagation();
-				const targetId = this.getAttribute('data-target');
-				document.querySelectorAll('.hidden-text').forEach(section => {
-					section.style.display = (section.id === targetId) ? 'block' : 'none';
-				});
-			});
-		});
-
-		document.addEventListener('click', function(event) {
-			if (!event.target.classList.contains('reveal')) {
-				document.querySelectorAll('.hidden-text').forEach(section => {
-					section.style.display = 'none';
-				});
-			}
-		});
-
-        
+        renderer.domElement.addEventListener('pointerup', function(event) {
+            event.preventDefault();
+            raycaster.setFromCamera(mouse, camera);
+            var intersects = raycaster.intersectObjects(boxes, true);
+            if (intersects.length > 0) {
+                var intersectedGroup = intersects[0].object.parent;
+                if (intersectedGroup.userData.label === "About Me") {
+                    document.getElementById('about').style.display = 'block';
+                } else if (intersectedGroup.userData.label === "Contact") {
+                    document.getElementById('contact').style.display = 'block';
+                } else if (intersectedGroup.userData.label === "Services") {
+                    document.getElementById('services').style.display = 'block';
+                } else {
+                    window.open(intersectedGroup.userData.link, '_blank');
+                }
+            } else {
+                document.getElementById('about').style.display = 'none';
+                document.getElementById('contact').style.display = 'none';
+                document.getElementById('services').style.display = 'none';
+            }
+        }, { passive: false });
     </script>
 </body>
 </html>
