FIXED LINKEDIN LINK

--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ALEX'S LI BLOG - MINIMAL TXT</title>
+  <title>ALEX'S BLOG</title>
   <style>
     body {
       background-color: white;
@@ -91,7 +91,7 @@
     
     <div style="margin: 20px 0; padding: 10px; border: 1px dotted #00AA00;">
       <p>> STATUS: Displaying Alex Christodoulou's LinkedIn posts</p>
-      <p>> PROFILE: <a href="https://www.linkedin.com/in/alexchristodoulou/" target="_blank">Alex Christodoulou | LinkedIn</a></p>
+      <p>> PROFILE: <a href="https://www.linkedin.com/in/achristodoulou/" target="_blank">Alex Christodoulou | LinkedIn</a></p>
       <p>> LAST UPDATE: <span id="last-update"></span></p>
     </div>
     
